deprecated Observer -> PropertyChangeListener. Almost running tests successfully now.